# SnippetButler

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  个人项目开发Git工作流.md
src/: App.css  App.tsx  appSettings.tsx  i18n.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppRail.tsx  ArchiveView.tsx  DiscoveryPanel.tsx  DiscoveryView.tsx  FilterBar.tsx  InputBar.tsx  SettingsView.tsx  Sidebar.tsx  SnippetCard.tsx  SnippetList.tsx
src/stores/: snippetStore.ts
src/utils/: db.ts  tags.ts
